<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/characters_screen">

    <fragment
        android:id="@+id/characters_screen"
        android:name="com.example.supertajnyprojekt.features.characters.presentation.CharacterFragment"
        android:label="@string/title_characters"
        tools:layout="@layout/fragment_character">
        <action
            android:id="@+id/action_navigate_from_character_screen_to_character_details_screen"
            app:destination="@id/characterDetailsFragment"
            app:popUpTo="@id/characters_screen" />
    </fragment>

    <fragment
        android:id="@+id/episodes_screen"
        android:name="com.example.supertajnyprojekt.features.episodes.presentation.EpisodeFragment"
        android:label="@string/title_episodes"
        tools:layout="@layout/fragment_episode">
        <action
            android:id="@+id/action_navigate_from_episodes_screen_to_episode_details_screen"
            app:destination="@id/episodeDetailsFragment"
            app:popUpTo="@id/episodes_screen" />
    </fragment>

    <fragment
        android:id="@+id/locations_screen"
        android:name="com.example.supertajnyprojekt.features.locations.presentation.LocationFragment"
        android:label="@string/title_locations"
        tools:layout="@layout/fragment_location">
        <action
            android:id="@+id/action_navigate_from_location_screen_to_location_details_screen"
            app:destination="@id/locationDetailsFragment"
            app:popUpTo="@id/locations_screen" />
    </fragment>
    <fragment
        android:id="@+id/episodeDetailsFragment"
        android:name="com.example.supertajnyprojekt.features.episodes.details.presentation.EpisodeDetailsFragment"
        android:label="@string/title_episode_details"
        tools:layout="@layout/fragment_details" />
    <fragment
        android:id="@+id/locationDetailsFragment"
        android:name="com.example.supertajnyprojekt.features.locations.details.presentation.LocationDetailsFragment"
        android:label="@string/title_location_details" />
    <fragment
        android:id="@+id/characterDetailsFragment"
        android:name="com.example.supertajnyprojekt.features.characters.details.presentation.CharacterDetailsFragment"
        android:label="@string/title_character_details" />
</navigation>